tests/algorithms/x/Rust/web_programming/fetch_bbc_news.error
warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/algorithms/x/Rust/web_programming/fetch_bbc_news.rs:91:2
   |
91 | };
   |  ^ help: remove this semicolon
   |
   = note: `#[warn(redundant_semicolons)]` on by default

warning: unnecessary parentheses around `if` condition
  --> /workspace/mochi/tests/algorithms/x/Rust/web_programming/fetch_bbc_news.rs:81:8
   |
81 |     if ((resp.articles.clone().len() as i64) == 0) {
   |        ^                                         ^
   |
   = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
   |
81 -     if ((resp.articles.clone().len() as i64) == 0) {
81 +     if (resp.articles.clone().len() as i64) == 0 {
   |

warning: unnecessary parentheses around `while` condition
  --> /workspace/mochi/tests/algorithms/x/Rust/web_programming/fetch_bbc_news.rs:86:11
   |
86 |     while (i < (resp.articles.clone().len() as i64)) {
   |           ^                                        ^
   |
help: remove these parentheses
   |
86 -     while (i < (resp.articles.clone().len() as i64)) {
86 +     while i < (resp.articles.clone().len() as i64) {
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/algorithms/x/Rust/web_programming/fetch_bbc_news.rs:89:13
   |
89 |         i = (i + 1);
   |             ^     ^
   |
help: remove these parentheses
   |
89 -         i = (i + 1);
89 +         i = i + 1;
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/algorithms/x/Rust/web_programming/fetch_bbc_news.rs:94:28
   |
94 |     let duration_us: i64 = ((_end - _start) / 1000);
   |                            ^                      ^
   |
help: remove these parentheses
   |
94 -     let duration_us: i64 = ((_end - _start) / 1000);
94 +     let duration_us: i64 = (_end - _start) / 1000;
   |

error[E0308]: mismatched types
  --> /workspace/mochi/tests/algorithms/x/Rust/web_programming/fetch_bbc_news.rs:80:58
   |
80 |     let mut resp: NewsResponse = NewsResponse {articles: 0};
   |                                                          ^ expected `Vec<Article>`, found integer
   |
   = note: expected struct `Vec<Article>`
                found type `{integer}`

error: aborting due to 1 previous error; 5 warnings emitted

For more information about this error, try `rustc --explain E0308`.
